@@ -1,6 +1,7 @@
 FlightPath 6.x Changelog
 ========================
 
+
 2021-06-10
   Added ability to have group requirements (in degrees) with fractional hours.  Ex: 0.5 hours or 1.2 hours, etc.  Previously,
   when a group was loaded, the hours_required field was being intval()'d.  Changed to floatval().
@@ -8,6 +9,10 @@ FlightPath 6.x Changelog
   Fixed bug where course descriptions were not being cached correctly due to a typo.
   
   Wrapped "hours" and "hrs" with t() function so those words can be translated to "credits" if need be in a hook_translate function.
+
+  Fixed bug where group couldn't be deleted from degree plan due to school_id being set.
+  
+  Worked on courses issues with schools.
   
 
 2021-06-07
